<resources>
    <string name="app_name">My Notes App</string>
    <string name="note">Note</string>
    <string name="updated_at">Updated At</string>
    <string name="delete_button">Delete button</string>
    <string name="enter_your_note_details">Enter Note Details…</string>
    <string name="enter_note_title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="update_note">Update Note</string>
    <string name="save_note">Save Note</string>
    <string name="open_timer_for_note_item">Open timer for note item</string>
    <string name="_0">0</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="minutes">min</string>
    <string name="increase_time_amount">Increase time amount</string>
    <string name="_25">25</string>
    <string name="decrease_time_amount">Decrease time amount</string>
    <string name="dsc">DSC</string>
    <string name="asc">ASC</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>
    <string name="sorting_menu">Sorting Menu</string>
    <string name="description">Description</string>
</resources>